# Fotomat

./: CMakeLists.txt  README.md
config/: config.json  enable_button_led.sh
include/: CameraInterface.hpp  GpioThread.hpp  ImageSaver.hpp  MainWindow.hpp  OverlayWidget.hpp  QRCodeGenerator.hpp  VideoWidget.hpp  WorkerThread.hpp  gpio.h
launch/: doFormat.sh
src/: CameraInterface.cpp  GpioThread.cpp  ImageSaver.cpp  MainWindow.cpp  OverlayWidget.cpp  QRCodeGenerator.cpp  VideoWidget.cpp  WorkerThread.cpp  gpio.c  main.cpp
